fixed portfolio width on tablet

--- a/css/agency.css
+++ b/css/agency.css
@@ -448,11 +448,11 @@ section h3.section-subheading {
 
 
 /*new*/
-@media (min-width: 767px) {
+@media (min-width: 767px)
 #portfolio .portfolio-item {
     margin: 0 0 30px;
     height: 300px;
-    width: 292px;
+    width: 100%;
 }
 
 .timeline {
